# planeta_elt2

./: .gitignore  BACKLOG.md  CHANGELOG.md  ELT_HANDOVER_UPDATE.md  HANDOVER.md  README.md  alembic.ini  apply_fix.py  check_data.py  check_db.py  check_handover.py  check_statuses.py  dashboard.py  debug_system.py  deploy_schema.py  enable_pk_migration.py  fast_loader.py  get_headers.py  list_staging_tables.py  list_tables.py  manual_fix.sql  pyproject.toml  requirements.txt  run_pipeline.py  sources.yml  supabase_schema_map.md  transform_to_public.py  verify_db.py  webapp_migration_prompt.md
.agent/: skills
alembic/: .expected_version  env.py
docs/: BACKLOG.md  CHANGELOG.md  DATA_SOURCES.md  EXTERNAL_AUDIT.md  HANDOVER.md  IMPLEMENTATION_ROADMAP.md  PK_CDC_ANALYSIS.md  PROJECT_ANALYSIS.md  SCHEDULER.md  SYSTEM_MANUAL.md  SYSTEM_MANUAL_QA.md  Scripts_index.md
google_apps_script/: change_log_triggers.js
legacy/: cdc_loader.py  fast_loader.py
pages/: 1_📊_Table_Details.py  2_🚨_Data_Quality.py  3_⏱_Performance_Trends.py
scripts/: chaos_runner.py  check_permissions.py  check_tables.py  clean_legacy_logs.py  clean_logs.py  debug_dashboard_data.py  debug_trainings.py  diagnostic_duplicates.py  etl_diagnose.py  fix_handover_schema.sql  health_check.py  inspect_sheets.py  migrate_hst.py  verify_core_columns.py  verify_schema_integrity.py  whoami.py
src/: cdc.py  main.py
tests/: test_cdc.py  test_cleaning.py  test_data_cleaner.py  test_data_corruption.py  test_loader_schema.py  test_loader_security.py  test_locking.py  test_pipeline_e2e.py  test_retry.py  (+5 more)
(+65 files in other folders)
